fix: top menu is now visible in side menu on smaller screens

--- a/src/layouts/general/layout.module.css
+++ b/src/layouts/general/layout.module.css
@@ -444,7 +444,7 @@
     padding-right: 0;
     padding-left: 0;
     background-color: transparent;
-    padding-top: 2.1rem;
+    padding-top: 0;
     overflow: hidden;
   }
   .nav__handbooks__container {
